*SVN*

* Added all the HTTP methods as alternatives to the generic "process" for functional testing #276 [Tobias Luetke]. Examples:

    # Calls Controller#miletone with a GET request
    process :milestone
    
    # Calls Controller#miletone with a POST request that has parameters
    post :milestone, { "name" => "David" }
    
    # Calls Controller#milestone with a HEAD request that has both parameters and session data
    head :milestone, { "id" => 1 }, { "user_id" => 23 }

  This is especially useful for testing idiomatic REST web services.

* Added proper handling of HEAD requests, so that content isn't returned (Request#head? added as well) #277 [Eric Hodel]

* Added indifference to whether @headers["Content-Type"], @headers["Content-type"], or @headers["content-type"] is used.

* Added TestSession#session_id that returns an empty string to make it easier to functional test applications that doesn't use 
  cookie-based sessions #275 [jcf]

* Fixed that cached template loading would still check the file system to see if the file existed #258 [Andreas Schwarz]

* Added options to tailor header tag, div id, and div class on ActiveRecordHelper#error_messages_for [josh]

* Added graceful handling of non-alphanumeric names and misplaced brackets in input parameters [bitsweat]

* Added a new container for cookies that makes them more intuative to use. The old methods of cookie and @cookies have been deprecated.

  Examples for writing:

    cookies["user_name"] = "david" # => Will set a simple session cookie
    cookies["login"] = { "value" => "XJ-122", "expires" => Time.now + 360} # => Will set a cookie that expires in 1 hour
    
  Examples for reading:
  
    cookies["user_name"] # => "david"
    cookies.size         # => 2

  Read more in ActionController::Cookies

  NOTE: If you were using the old accessor (cookies instead of @cookies), this could potentially break your code -- if you expect a full cookie object!
